[package]
name = "virtual_visca"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["jpeg"] }
bevy_asset_loader = "0.23"
clap = { version = "4.5.46", features = ["derive"] }
# clap-port-flag = "0.4.0" # this version is unix only :(
grafton-visca = "0.6.0"
thiserror = "2.0.18"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [profile.dist]
# inherits = "release"
# lto = "thin"

