[package]
name = "virtual_visca"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
bevy = { version = "0.18.1", features = ["jpeg"] }
bevy_asset_loader = "0.25"
clap = { version = "4.6.0", features = ["derive"] }
# clap-port-flag = "0.4.0" # this version is unix only :(
grafton-visca = "0.11.0"
itertools = "0.14.0"
thiserror = "2.0.18"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [profile.dist]
# inherits = "release"
# lto = "thin"

